Bug 400657 - exporting model to xhtml is broken
Summary: exporting model to xhtml is broken
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.26.2 (KDE Applications 18.08.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-04 11:26 UTC by Ralf Habacker
Modified: 2018-11-04 13:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.26.3 (KDE Applications 18.08.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-11-04 11:26:38 UTC
On exporting a model to xhtml no html file is generated.


STEPS TO REPRODUCE
1. start umbrello
2. add some classes
3. select file->export model->model nach xhtml exportieren

OBSERVED RESULT
No html file is generated in the given directory

EXPECTED RESULT
The html file should be generated in the given directory
Comment 1 Ralf Habacker 2018-11-04 11:31:21 UTC
Git commit 552631f9c1902ca0ef3c4b6671eab3e985e7eef2 by Ralf Habacker.
Committed on 04/11/2018 at 11:29.
Pushed by habacker into branch 'Applications/18.08'.

Make it possible to run docbook export from build dir

M  +2    -0    umbrello/CMakeLists.txt
M  +6    -2    umbrello/docgenerators/docbook2xhtmlgeneratorjob.cpp
M  +5    -2    umbrello/docgenerators/docbookgeneratorjob.cpp
M  +8    -4    umbrello/docgenerators/xhtmlgenerator.cpp
M  +3    -1    umbrello/uml.cpp

https://commits.kde.org/umbrello/552631f9c1902ca0ef3c4b6671eab3e985e7eef2
Comment 2 Ralf Habacker 2018-11-04 13:45:07 UTC
Git commit e418f62bf690b5e7d98c4e25a43f432d9d905062 by Ralf Habacker.
Committed on 04/11/2018 at 11:29.
Pushed by habacker into branch 'Applications/18.08'.

Fixes broken docbook URLs when creating xhtml

The stylesheet docbook.xsl no longer exists under ksgmtools2,
but is included in the docbook package and the remote docbook.xsl
url no longer fits.

The code for determining user-defined and local docbook xsl files
has been moved to the XhtmlGenerator class in addition to the
existing queries.

M  +1    -1    umbrello/docgenerators/docbook2xhtml.xsl
M  +3    -14   umbrello/docgenerators/docbook2xhtmlgeneratorjob.cpp
M  +37   -0    umbrello/docgenerators/xhtmlgenerator.cpp
M  +3    -1    umbrello/docgenerators/xhtmlgenerator.h

https://commits.kde.org/umbrello/e418f62bf690b5e7d98c4e25a43f432d9d905062